Fix hour palette on mobile

--- a/src/hour-palette/hour-palette.css
+++ b/src/hour-palette/hour-palette.css
@@ -1,19 +1,83 @@
+@media screen and (max-width: 420px) {
+    section {
+        font-size: .8em;
+        border-radius: 220px;
+        box-sizing: border-box;
+        height: 240px;
+        width: 240px;
+        padding-top: 80px;
+    }
+    #cn-wrapper {
+        height: 22em;
+        width: 22em;
+        top: 50vh;
+        transform: translateY(-50%) translateX(-50%);
+        left: 50%;
+        font-size: .8em;
+    }
+    #cn-wrapper li {
+        font-size: 1.28em;
+    }
+}
+@media screen and (min-width: 420px) {
+    section {
+        font-size: 1.5em;
+        border-radius: 220px;
+        box-sizing: border-box;
+        height: 380px;
+        width: 380px;
+        padding-top: 120px;
+    }
+    #cn-wrapper {
+        width: 25.7em;
+        height: 25.7em;
+        top: 50vh;
+        transform: translateY(-50%);
+        left: 50%;
+        margin-left: -13em;
+        font-size:1.1em;
+    }
+    #cn-wrapper li {
+        font-size: 1.5em;
+    }
+}
+
+body {
+    transition: background-color 1000ms linear;
+    font-family: 'Ubuntu Mono', monospace;
+    color: white;
+}
+
+section {
+    text-align: center;
+    margin: 50vh auto 0;
+    transform: translateY(-50%);
+    background: black;
+    z-index: 10;
+}
+
+h1, h2 {
+    margin: 0
+}
+
+#color {
+    font-size: 3.5em;
+}
+
+#time {
+    font-size: 1.5em;
+    font-weight: normal;
+}
+
+
 #cn-wrapper {
-    font-size:1.1em;
-    width: 25.7em;
-    height: 25.7em;
     overflow: hidden;
     position: fixed;
-    top: 50vh;
-    transform: translateY(-50%);
-    left: 50%;
     border-radius: 50%;
-    margin-left: -13em;
     border: 5px solid black;
 }
 #cn-wrapper li {
     position: absolute;
-    font-size: 1.5em;
     width: 10em;
     height: 10em;
     transform-origin: 100% 100%;
